--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,13 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html,
 body {
+  overflow: hidden;
   margin: 0;
+}
+#canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
 }
